change data paths and column reordering

--- a/tutorials/Convert_NASA_Data_to_Orion_Format.ipynb
+++ b/tutorials/Convert_NASA_Data_to_Orion_Format.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Convert NASA data to Orion format\n",
+    "# 1. Convert NASA data to Orion format\n",
     "\n",
     "In this notebook we download the data from the Telemanom S3 bucket and reformat it\n",
     "as Orion pipelines expect."
@@ -99,13 +99,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "NASA_DIR = os.path.join('data', '{}', '{}')\n",
+    "\n",
     "def build_df(data, start=0):\n",
     "    index = np.array(range(start, start + len(data)))\n",
     "    timestamp = index * 21600 + 1222819200\n",
     "    \n",
     "    return pd.DataFrame({'timestamp': timestamp, 'value': data[:, 0]})\n",
     "\n",
-    "data = build_df(np.load('data/train/S-1.npy'))"
+    "data = build_df(np.load(NASA_DIR.format('train', 'S-1.npy')))"
    ]
   },
   {
@@ -204,422 +206,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "PATH_DIR = os.path.join('csv', '{}')\n",
+    "\n",
     "for signal in train_signals:\n",
     "    name = signal[:-4]\n",
-    "    train_np = np.load('data/train/' + signal)\n",
-    "    test_np = np.load('data/test/' + signal)\n",
+    "    train_np = np.load(NASA_DIR.format('train', signal))\n",
+    "    test_np = np.load(NASA_DIR.format('test', signal))\n",
     "    \n",
     "    data = build_df(np.concatenate([train_np, test_np]))\n",
-    "    data.to_csv('csv/' + name + '.csv', index=False)\n",
+    "    data.to_csv(PATH_DIR.format(name + '.csv'), index=False)\n",
     "    \n",
     "    train = build_df(train_np)\n",
-    "    train.to_csv('csv/' + name + '-train.csv', index=False)\n",
+    "    train.to_csv(PATH_DIR.format(name + '-train.csv'), index=False)\n",
     "    \n",
     "    test = build_df(test_np, start=len(train))\n",
-    "    test.to_csv('csv/' + name + '-test.csv', index=False)"
+    "    test.to_csv(PATH_DIR.format(name + '-test.csv'), index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s1 = pd.read_csv('csv/S-1.csv')"
+    "s1 = pd.read_csv(PATH_DIR.format('S-1.csv'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1222819200</td>\n",
-       "      <td>-0.366359</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1222840800</td>\n",
-       "      <td>-0.394108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1222862400</td>\n",
-       "      <td>0.403625</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1222884000</td>\n",
-       "      <td>-0.362759</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1222905600</td>\n",
-       "      <td>-0.370746</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    timestamp     value\n",
-       "0  1222819200 -0.366359\n",
-       "1  1222840800 -0.394108\n",
-       "2  1222862400  0.403625\n",
-       "3  1222884000 -0.362759\n",
-       "4  1222905600 -0.370746"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "s1.head()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10149, 2)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "s1.shape"
+    "# 2. Prepare Anomaly Labels\n",
+    "\n",
+    "We will use the `labeled_anomalies.csv` file from the telemanom project\n",
+    "and convert it to the CSV that we will later on use in Orion."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s1_train = pd.read_csv('csv/S-1-train.csv')"
+    "import os\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "\n",
+    "from orion.data import load_signal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1222819200</td>\n",
-       "      <td>-0.366359</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1222840800</td>\n",
-       "      <td>-0.394108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1222862400</td>\n",
-       "      <td>0.403625</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1222884000</td>\n",
-       "      <td>-0.362759</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1222905600</td>\n",
-       "      <td>-0.370746</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    timestamp     value\n",
-       "0  1222819200 -0.366359\n",
-       "1  1222840800 -0.394108\n",
-       "2  1222862400  0.403625\n",
-       "3  1222884000 -0.362759\n",
-       "4  1222905600 -0.370746"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s1_train.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2813</th>\n",
-       "      <td>1283580000</td>\n",
-       "      <td>-0.365308</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2814</th>\n",
-       "      <td>1283601600</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2815</th>\n",
-       "      <td>1283623200</td>\n",
-       "      <td>-0.341357</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2816</th>\n",
-       "      <td>1283644800</td>\n",
-       "      <td>-0.392546</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2817</th>\n",
-       "      <td>1283666400</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       timestamp     value\n",
-       "2813  1283580000 -0.365308\n",
-       "2814  1283601600  1.000000\n",
-       "2815  1283623200 -0.341357\n",
-       "2816  1283644800 -0.392546\n",
-       "2817  1283666400  1.000000"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s1_train.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2818, 2)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s1_train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s1_test = pd.read_csv('csv/S-1-test.csv')"
+    "CSV_URL = 'https://github.com/khundman/telemanom/raw/master/labeled_anomalies.csv'\n",
+    "\n",
+    "df = pd.read_csv(CSV_URL)\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1283688000</td>\n",
-       "      <td>0.028893</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1283709600</td>\n",
-       "      <td>0.403040</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1283731200</td>\n",
-       "      <td>-0.366585</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1283752800</td>\n",
-       "      <td>-0.369710</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1283774400</td>\n",
-       "      <td>-0.386455</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    timestamp     value\n",
-       "0  1283688000  0.028893\n",
-       "1  1283709600  0.403040\n",
-       "2  1283731200 -0.366585\n",
-       "3  1283752800 -0.369710\n",
-       "4  1283774400 -0.386455"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "s1_test.head()"
+    "import os\n",
+    "import json\n",
+    "\n",
+    "labels_data = list()\n",
+    "\n",
+    "for _, row in df.iterrows():\n",
+    "    signal = row.chan_id\n",
+    "    data = load_signal(os.path.join('csv', signal + '.csv'))\n",
+    "    test = data[-row.num_values:]\n",
+    "    \n",
+    "    events = list()\n",
+    "    for start, end in json.loads(row.anomaly_sequences):\n",
+    "        start_ts = test.iloc[start].timestamp.astype(int)\n",
+    "        end_ts = test.iloc[end].timestamp.astype(int)\n",
+    "        events.append([start_ts, end_ts])\n",
+    "    \n",
+    "    labels_data.append({\n",
+    "        'signal': signal,\n",
+    "        'events': events\n",
+    "    })\n",
+    "    \n",
+    "labels = pd.DataFrame(labels_data)[['signal','events']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(7331, 2)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "s1_test.shape"
+    "labels.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels.to_csv('labels.csv', index=False)"
    ]
   }
  ],
@@ -639,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
