change kernel and remove dtype check

--- a/tutorials/pipelines/lstm_dynamic_threshold.ipynb
+++ b/tutorials/pipelines/lstm_dynamic_threshold.ipynb
@@ -665,9 +665,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "orion",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "orion"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
