--- a/tutorials/pipelines/lstm_dynamic_threshold.ipynb
+++ b/tutorials/pipelines/lstm_dynamic_threshold.ipynb
@@ -665,9 +665,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:orion] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-orion-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -679,7 +679,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
