--- a/tutorials/tulog/Tulog.ipynb
+++ b/tutorials/tulog/Tulog.ipynb
@@ -914,7 +914,7 @@
     "while i < max_start:\n",
     "    j = i\n",
     "    start = index[i]\n",
-    "    while error[i] > thresh:\n",
+    "    while i < len(error) and error[i] > thresh:\n",
     "        i += 1\n",
     "    \n",
     "    end = index[i]\n",
@@ -1408,7 +1408,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1422,7 +1422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
