--- a/tutorials/pipelines/lstm.ipynb
+++ b/tutorials/pipelines/lstm.ipynb
@@ -346,12 +346,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00be9392",
+   "id": "86a369ed",
    "metadata": {},
    "source": [
-    "### SimpleImputer\n",
-    "this primitive is an imputation transformer for filling missing values.\n",
-    "* **input**: `X` which is an n-dimensional sequence of values.\n",
+    "### MinMaxScaler\n",
+    "this primitive transforms features by scaling each feature to a given range.\n",
+    "* **input**: `X` the data used to compute the per-feature minimum and maximum used for later scaling along the features axis.\n",
     "* **output**: `X` which is a transformed version of X."
    ]
   },
@@ -374,41 +374,6 @@
    ],
    "source": [
     "step = 1\n",
-    "\n",
-    "context = pipeline.fit(**context, output_=step, start_=step)\n",
-    "context.keys()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "86a369ed",
-   "metadata": {},
-   "source": [
-    "### MinMaxScaler\n",
-    "this primitive transforms features by scaling each feature to a given range.\n",
-    "* **input**: `X` the data used to compute the per-feature minimum and maximum used for later scaling along the features axis.\n",
-    "* **output**: `X` which is a transformed version of X."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "d130e641",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['index', 'X', 'drop'])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "step = 2\n",
     "\n",
     "context = pipeline.fit(**context, output_=step, start_=step)\n",
     "context.keys()"
@@ -443,6 +408,41 @@
   },
   {
    "cell_type": "markdown",
+   "id": "00be9392",
+   "metadata": {},
+   "source": [
+    "### isnull\n",
+    "this primitive identifies which elements are null.\n",
+    "* **input**: `X` which is an n-dimensional sequence of values.\n",
+    "* **output**: `drop` which is a boolean array of missing values in X."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d130e641",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['index', 'X', 'drop'])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "step = 2\n",
+    "\n",
+    "context = pipeline.fit(**context, output_=step, start_=step)\n",
+    "context.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5b9eeac4",
    "metadata": {},
    "source": [
@@ -451,11 +451,12 @@
     "\n",
     "* **input**: \n",
     "    - `X` n-dimensional sequence to iterate over.\n",
-    "    - `index` array containing the index values of X.\n",
+    "    - `index` array containing the index values of `X`.\n",
+    "    - `drop` array of booleans indicating which windows contain missing `X` elements to drop.\n",
     "* **output**:\n",
     "    - `X` input sequences.\n",
     "    - `y` target sequences.\n",
-    "    - `index` first index value of each input sequence.\n",
+    "    - `dropped_index` first index value of each input sequence.\n",
     "    - `target_index` first index value of each target sequence."
    ]
   },
@@ -507,28 +508,7 @@
     "# and similarly y is (# slices, target size)\n",
     "\n",
     "print(\"X shape = {}\\ny shape = {}\\nindex shape = {}\\ntarget index shape = {}\".format(\n",
-    "    context['X'].shape, context['y'].shape, context['index'].shape, context['target_index'].shape))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "3157641e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(8966,)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "context['dropped_index'].shape"
+    "    context['X'].shape, context['y'].shape, context['dropped_index'].shape, context['target_index'].shape))"
    ]
   },
   {
@@ -679,7 +659,7 @@
    "id": "b76cf15b",
    "metadata": {},
    "source": [
-    "### masked_array 1\n",
+    "### masked array 1\n",
     "\n",
     "create a masked array with given values\n",
     "\n",
@@ -739,7 +719,7 @@
    "id": "94b70966",
    "metadata": {},
    "source": [
-    "### masked_array 2\n",
+    "### masked array 2\n",
     "\n",
     "create a masked array with given values\n",
     "\n",
@@ -861,7 +841,7 @@
    "id": "d30efc98",
    "metadata": {},
    "source": [
-    "### masked_array 3\n",
+    "### masked array 3\n",
     "\n",
     "create a masked array with given values\n",
     "\n",
