allow changing of window size

--- a/tutorials/Multivariate_Input.ipynb
+++ b/tutorials/Multivariate_Input.ipynb
@@ -255,29 +255,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-09-28 23:11:54.644061: I tensorflow/core/platform/cpu_feature_guard.cc:142] Your CPU supports instructions that this TensorFlow binary was not compiled to use: AVX2 FMA\n",
-      "2021-09-28 23:11:54.700416: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x7f8301da98d0 initialized for platform Host (this does not guarantee that XLA will be used). Devices:\n",
-      "2021-09-28 23:11:54.700434: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Host, Default Version\n"
+      "Using TensorFlow backend.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From /Users/sarahalnegheimish/opt/anaconda3/envs/orion/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:422: The name tf.global_variables is deprecated. Please use tf.compat.v1.global_variables instead.\n",
+      "WARNING:tensorflow:From /Users/sarah/opt/anaconda3/envs/orion/lib/python3.6/site-packages/tensorflow_core/python/ops/resource_variable_ops.py:1630: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "If using Keras pass *_constraint arguments to layers.\n",
+      "WARNING:tensorflow:From /Users/sarah/opt/anaconda3/envs/orion/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:422: The name tf.global_variables is deprecated. Please use tf.compat.v1.global_variables instead.\n",
       "\n",
       "Train on 7919 samples, validate on 1980 samples\n",
       "Epoch 1/5\n",
-      "7919/7919 [==============================] - 33s 4ms/step - loss: 0.2097 - mse: 0.2097 - val_loss: 0.2673 - val_mse: 0.2673\n",
+      "7919/7919 [==============================] - 39s 5ms/step - loss: 0.2056 - mse: 0.2056 - val_loss: 0.2614 - val_mse: 0.2614\n",
       "Epoch 2/5\n",
-      "7919/7919 [==============================] - 30s 4ms/step - loss: 0.1997 - mse: 0.1997 - val_loss: 0.2557 - val_mse: 0.2557\n",
+      "7919/7919 [==============================] - 35s 4ms/step - loss: 0.1993 - mse: 0.1993 - val_loss: 0.2581 - val_mse: 0.2581\n",
       "Epoch 3/5\n",
-      "7919/7919 [==============================] - 31s 4ms/step - loss: 0.1980 - mse: 0.1980 - val_loss: 0.2581 - val_mse: 0.2581\n",
+      "7919/7919 [==============================] - 37s 5ms/step - loss: 0.1973 - mse: 0.1973 - val_loss: 0.2637 - val_mse: 0.2637\n",
       "Epoch 4/5\n",
-      "7919/7919 [==============================] - 31s 4ms/step - loss: 0.1950 - mse: 0.1950 - val_loss: 0.2702 - val_mse: 0.2702\n",
+      "7919/7919 [==============================] - 36s 5ms/step - loss: 0.1934 - mse: 0.1934 - val_loss: 0.2594 - val_mse: 0.2594\n",
       "Epoch 5/5\n",
-      "7919/7919 [==============================] - 32s 4ms/step - loss: 0.1941 - mse: 0.1941 - val_loss: 0.2677 - val_mse: 0.2677\n",
-      "9899/9899 [==============================] - 12s 1ms/step\n"
+      "7919/7919 [==============================] - 36s 5ms/step - loss: 0.1933 - mse: 0.1933 - val_loss: 0.2808 - val_mse: 0.2808\n",
+      "9899/9899 [==============================] - 13s 1ms/step\n"
      ]
     }
    ],
@@ -352,7 +353,7 @@
        "      <th>0</th>\n",
        "      <td>1228219200</td>\n",
        "      <td>1229472000</td>\n",
-       "      <td>0.792486</td>\n",
+       "      <td>0.623775</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -360,7 +361,7 @@
       ],
       "text/plain": [
        "        start         end  severity\n",
-       "0  1228219200  1229472000  0.792486"
+       "0  1228219200  1229472000  0.623775"
       ]
      },
      "execution_count": 4,
@@ -387,6 +388,7 @@
     "    'keras.Sequential.LSTMSeq2Seq#1': {\n",
     "        'epochs': 5,\n",
     "        'verbose': True,\n",
+    "        'window_size': 100,\n",
     "        'input_shape': [100, 25],\n",
     "        'target_shape': [100, 1],\n",
     "    }\n",
@@ -403,78 +405,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 8039 samples, validate on 2010 samples\n",
-      "Epoch 1/5\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-09-28 23:18:43.564815: E tensorflow/core/grappler/optimizers/dependency_optimizer.cc:697] Iteration = 0, topological sort failed with message: The graph couldn't be sorted in topological order.\n",
-      "2021-09-28 23:18:43.569190: E tensorflow/core/grappler/optimizers/dependency_optimizer.cc:697] Iteration = 1, topological sort failed with message: The graph couldn't be sorted in topological order.\n",
-      "2021-09-28 23:18:43.593575: E tensorflow/core/grappler/optimizers/meta_optimizer.cc:533] model_pruner failed: Invalid argument: MutableGraphView::MutableGraphView error: node 'loss_1/reshape_1_loss/mean_squared_error/weighted_loss/concat' has self cycle fanin 'loss_1/reshape_1_loss/mean_squared_error/weighted_loss/concat'.\n",
-      "2021-09-28 23:18:43.640070: E tensorflow/core/grappler/optimizers/meta_optimizer.cc:533] remapper failed: Invalid argument: MutableGraphView::MutableGraphView error: node 'loss_1/reshape_1_loss/mean_squared_error/weighted_loss/concat' has self cycle fanin 'loss_1/reshape_1_loss/mean_squared_error/weighted_loss/concat'.\n",
-      "2021-09-28 23:18:43.650185: E tensorflow/core/grappler/optimizers/meta_optimizer.cc:533] arithmetic_optimizer failed: Invalid argument: The graph couldn't be sorted in topological order.\n",
-      "2021-09-28 23:18:43.659993: E tensorflow/core/grappler/optimizers/dependency_optimizer.cc:697] Iteration = 0, topological sort failed with message: The graph couldn't be sorted in topological order.\n",
-      "2021-09-28 23:18:43.666494: E tensorflow/core/grappler/optimizers/dependency_optimizer.cc:697] Iteration = 1, topological sort failed with message: The graph couldn't be sorted in topological order.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8000/8039 [============================>.] - ETA: 0s - loss: 0.2007 - mse: 0.2007"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-09-28 23:18:53.709501: E tensorflow/core/grappler/optimizers/dependency_optimizer.cc:697] Iteration = 0, topological sort failed with message: The graph couldn't be sorted in topological order.\n",
-      "2021-09-28 23:18:53.710394: E tensorflow/core/grappler/optimizers/dependency_optimizer.cc:697] Iteration = 1, topological sort failed with message: The graph couldn't be sorted in topological order.\n",
-      "2021-09-28 23:18:53.713332: E tensorflow/core/grappler/optimizers/meta_optimizer.cc:533] model_pruner failed: Invalid argument: MutableGraphView::MutableGraphView error: node 'loss_1/reshape_1_loss/mean_squared_error/weighted_loss/concat' has self cycle fanin 'loss_1/reshape_1_loss/mean_squared_error/weighted_loss/concat'.\n",
-      "2021-09-28 23:18:53.717997: E tensorflow/core/grappler/optimizers/meta_optimizer.cc:533] remapper failed: Invalid argument: MutableGraphView::MutableGraphView error: node 'loss_1/reshape_1_loss/mean_squared_error/weighted_loss/concat' has self cycle fanin 'loss_1/reshape_1_loss/mean_squared_error/weighted_loss/concat'.\n",
-      "2021-09-28 23:18:53.719014: E tensorflow/core/grappler/optimizers/meta_optimizer.cc:533] arithmetic_optimizer failed: Invalid argument: The graph couldn't be sorted in topological order.\n",
-      "2021-09-28 23:18:53.719818: E tensorflow/core/grappler/optimizers/dependency_optimizer.cc:697] Iteration = 0, topological sort failed with message: The graph couldn't be sorted in topological order.\n",
-      "2021-09-28 23:18:53.720563: E tensorflow/core/grappler/optimizers/dependency_optimizer.cc:697] Iteration = 1, topological sort failed with message: The graph couldn't be sorted in topological order.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8039/8039 [==============================] - 11s 1ms/step - loss: 0.2007 - mse: 0.2007 - val_loss: 0.2560 - val_mse: 0.2560\n",
+      "Train on 7999 samples, validate on 2000 samples\n",
+      "Epoch 1/5\n",
+      "7999/7999 [==============================] - 17s 2ms/step - loss: 0.2017 - mse: 0.2017 - val_loss: 0.2593 - val_mse: 0.2593\n",
       "Epoch 2/5\n",
-      "8039/8039 [==============================] - 10s 1ms/step - loss: 0.1984 - mse: 0.1984 - val_loss: 0.2563 - val_mse: 0.2563\n",
+      "7999/7999 [==============================] - 16s 2ms/step - loss: 0.1985 - mse: 0.1985 - val_loss: 0.2604 - val_mse: 0.2604\n",
       "Epoch 3/5\n",
-      "8039/8039 [==============================] - 11s 1ms/step - loss: 0.1984 - mse: 0.1984 - val_loss: 0.2533 - val_mse: 0.2533\n",
+      "7999/7999 [==============================] - 17s 2ms/step - loss: 0.1985 - mse: 0.1985 - val_loss: 0.2579 - val_mse: 0.2579\n",
       "Epoch 4/5\n",
-      "8039/8039 [==============================] - 11s 1ms/step - loss: 0.1983 - mse: 0.1983 - val_loss: 0.2495 - val_mse: 0.2495\n",
+      "7999/7999 [==============================] - 16s 2ms/step - loss: 0.1985 - mse: 0.1985 - val_loss: 0.2577 - val_mse: 0.2577\n",
       "Epoch 5/5\n",
-      "8039/8039 [==============================] - 11s 1ms/step - loss: 0.1953 - mse: 0.1953 - val_loss: 0.2333 - val_mse: 0.2333\n",
-      "10049/10049 [==============================] - 4s 432us/step\n"
+      "7999/7999 [==============================] - 17s 2ms/step - loss: 0.1984 - mse: 0.1984 - val_loss: 0.2558 - val_mse: 0.2558\n",
+      "9999/9999 [==============================] - 7s 677us/step\n"
      ]
     }
    ],
    "source": [
     "hyperparameters = {\n",
     "    \"mlprimitives.custom.timeseries_preprocessing.rolling_window_sequences#1\": {\n",
-    "        \"window_size\": 100,\n",
-    "        \"target_column\": 0 \n",
+    "        'window_size': 150,\n",
+    "        'target_column': 0 \n",
     "    },\n",
     "    'keras.Sequential.LSTMSeq2Seq#1': {\n",
     "        'epochs': 5,\n",
     "        'verbose': True,\n",
-    "        'input_shape': [100, 25],\n",
-    "        'target_shape': [100, 1],\n",
+    "        'window_size': 150,\n",
+    "        'input_shape': [150, 25],\n",
+    "        'target_shape': [150, 1],\n",
     "    }\n",
     "}\n",
     "\n",
@@ -520,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
