--- a/tutorials/Multivariate_Input.ipynb
+++ b/tutorials/Multivariate_Input.ipynb
@@ -286,7 +286,7 @@
     "from orion import Orion\n",
     "\n",
     "hyperparameters = {\n",
-    "    \"mlprimitives.custom.timeseries_preprocessing.rolling_window_sequences#1\": {\n",
+    "    \"mlstars.custom.timeseries_preprocessing.rolling_window_sequences#1\": {\n",
     "        'target_column': 0 \n",
     "    },\n",
     "    'keras.Sequential.LSTMTimeSeriesRegressor#1': {\n",
@@ -381,7 +381,7 @@
     "\n",
     "```python3\n",
     "hyperparameters = {\n",
-    "    \"mlprimitives.custom.timeseries_preprocessing.rolling_window_sequences#1\": {\n",
+    "    \"mlstars.custom.timeseries_preprocessing.rolling_window_sequences#1\": {\n",
     "        'window_size': 100,\n",
     "        'target_column': 0 \n",
     "    },\n",
@@ -429,7 +429,7 @@
    ],
    "source": [
     "hyperparameters = {\n",
-    "    \"mlprimitives.custom.timeseries_preprocessing.rolling_window_sequences#1\": {\n",
+    "    \"mlstars.custom.timeseries_preprocessing.rolling_window_sequences#1\": {\n",
     "        'window_size': 150,\n",
     "        'target_column': 0 \n",
     "    },\n",
@@ -470,7 +470,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -484,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
