--- a/tutorials/pipelines/azure.ipynb
+++ b/tutorials/pipelines/azure.ipynb
@@ -141,7 +141,7 @@
    "outputs": [],
    "source": [
     "hyperparameters = {\n",
-    "    \"mlprimitives.custom.timeseries_preprocessing.time_segments_aggregate#1\": {\n",
+    "    \"mlstars.custom.timeseries_preprocessing.time_segments_aggregate#1\": {\n",
     "        \"interval\": 21600,\n",
     "    },\n",
     "    \"orion.primitives.azure_anomaly_detector.split_sequence#1\": {\n",
@@ -201,7 +201,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -215,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
