--- a/tutorials/pipelines/lstm_dynamic_threshold.ipynb
+++ b/tutorials/pipelines/lstm_dynamic_threshold.ipynb
@@ -116,15 +116,7 @@
    "execution_count": 3,
    "id": "fa524c4c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mlblocks import MLPipeline\n",
     "\n",
@@ -171,10 +163,10 @@
     {
      "data": {
       "text/plain": [
-       "['mlprimitives.custom.timeseries_preprocessing.time_segments_aggregate',\n",
+       "['mlstars.custom.timeseries_preprocessing.time_segments_aggregate',\n",
        " 'sklearn.impute.SimpleImputer',\n",
        " 'sklearn.preprocessing.MinMaxScaler',\n",
-       " 'mlprimitives.custom.timeseries_preprocessing.rolling_window_sequences',\n",
+       " 'mlstars.custom.timeseries_preprocessing.rolling_window_sequences',\n",
        " 'keras.Sequential.LSTMTimeSeriesRegressor',\n",
        " 'orion.primitives.timeseries_errors.regression_errors',\n",
        " 'orion.primitives.timeseries_anomalies.find_anomalies']"
@@ -665,7 +657,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -679,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
