change nasa URL

--- a/tutorials/Convert_NASA_Data_to_Orion_Format.ipynb
+++ b/tutorials/Convert_NASA_Data_to_Orion_Format.ipynb
@@ -28,7 +28,7 @@
     "import urllib\n",
     "import zipfile\n",
     "\n",
-    "DATA_URL = 'https://s3-us-west-2.amazonaws.com/telemanom/data.zip'\n",
+    "DATA_URL = 'https://sintel-orion.s3.us-east-2.amazonaws.com/nasa.zip'\n",
     "\n",
     "if not os.path.exists('data'):\n",
     "    response = urllib.request.urlopen(DATA_URL)\n",
