Update Tutorials page (#576)
* init tutorials readme

* edited text

* modify tutorial notebooks

* fix format

* change nasa URL

--- a/tutorials/Convert_NASA_Data_to_Orion_Format.ipynb
+++ b/tutorials/Convert_NASA_Data_to_Orion_Format.ipynb
@@ -28,7 +28,7 @@
     "import urllib\n",
     "import zipfile\n",
     "\n",
-    "DATA_URL = 'https://s3-us-west-2.amazonaws.com/telemanom/data.zip'\n",
+    "DATA_URL = 'https://sintel-orion.s3.us-east-2.amazonaws.com/nasa.zip'\n",
     "\n",
     "if not os.path.exists('data'):\n",
     "    response = urllib.request.urlopen(DATA_URL)\n",
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,9 +238,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1222819200</td>\n",
+       "      <td>-0.366359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1222840800</td>\n",
+       "      <td>-0.394108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1222862400</td>\n",
+       "      <td>0.403625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1222884000</td>\n",
+       "      <td>-0.362759</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1222905600</td>\n",
+       "      <td>-0.370746</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    timestamp     value\n",
+       "0  1222819200 -0.366359\n",
+       "1  1222840800 -0.394108\n",
+       "2  1222862400  0.403625\n",
+       "3  1222884000 -0.362759\n",
+       "4  1222905600 -0.370746"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s1.head()"
    ]
@@ -257,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,9 +339,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>chan_id</th>\n",
+       "      <th>spacecraft</th>\n",
+       "      <th>anomaly_sequences</th>\n",
+       "      <th>class</th>\n",
+       "      <th>num_values</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>P-1</td>\n",
+       "      <td>SMAP</td>\n",
+       "      <td>[[2149, 2349], [4536, 4844], [3539, 3779]]</td>\n",
+       "      <td>[contextual, contextual, contextual]</td>\n",
+       "      <td>8505</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>S-1</td>\n",
+       "      <td>SMAP</td>\n",
+       "      <td>[[5300, 5747]]</td>\n",
+       "      <td>[point]</td>\n",
+       "      <td>7331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>E-1</td>\n",
+       "      <td>SMAP</td>\n",
+       "      <td>[[5000, 5030], [5610, 6086]]</td>\n",
+       "      <td>[contextual, contextual]</td>\n",
+       "      <td>8516</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>E-2</td>\n",
+       "      <td>SMAP</td>\n",
+       "      <td>[[5598, 6995]]</td>\n",
+       "      <td>[point]</td>\n",
+       "      <td>8532</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>E-3</td>\n",
+       "      <td>SMAP</td>\n",
+       "      <td>[[5094, 8306]]</td>\n",
+       "      <td>[point]</td>\n",
+       "      <td>8307</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  chan_id spacecraft                           anomaly_sequences  \\\n",
+       "0     P-1       SMAP  [[2149, 2349], [4536, 4844], [3539, 3779]]   \n",
+       "1     S-1       SMAP                              [[5300, 5747]]   \n",
+       "2     E-1       SMAP                [[5000, 5030], [5610, 6086]]   \n",
+       "3     E-2       SMAP                              [[5598, 6995]]   \n",
+       "4     E-3       SMAP                              [[5094, 8306]]   \n",
+       "\n",
+       "                                  class  num_values  \n",
+       "0  [contextual, contextual, contextual]        8505  \n",
+       "1                               [point]        7331  \n",
+       "2              [contextual, contextual]        8516  \n",
+       "3                               [point]        8532  \n",
+       "4                               [point]        8307  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "CSV_URL = 'https://github.com/khundman/telemanom/raw/master/labeled_anomalies.csv'\n",
     "\n",
@@ -282,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,16 +475,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>signal</th>\n",
+       "      <th>events</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>P-1</td>\n",
+       "      <td>[[1331272800, 1335592800], [1382832000, 138948...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>S-1</td>\n",
+       "      <td>[[1398168000, 1407823200]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>E-1</td>\n",
+       "      <td>[[1393027200, 1393675200], [1406203200, 141648...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>E-2</td>\n",
+       "      <td>[[1405944000, 1436119200]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>E-3</td>\n",
+       "      <td>[[1395057600, 1464436800]]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  signal                                             events\n",
+       "0    P-1  [[1331272800, 1335592800], [1382832000, 138948...\n",
+       "1    S-1                         [[1398168000, 1407823200]]\n",
+       "2    E-1  [[1393027200, 1393675200], [1406203200, 141648...\n",
+       "3    E-2                         [[1405944000, 1436119200]]\n",
+       "4    E-3                         [[1395057600, 1464436800]]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "labels.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +563,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -345,9 +577,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
