edit pipeline name

--- a/tutorials/pipelines/units.ipynb
+++ b/tutorials/pipelines/units.ipynb
@@ -126,7 +126,7 @@
    "source": [
     "from mlblocks import MLPipeline\n",
     "\n",
-    "pipeline_name = 'UniTS'\n",
+    "pipeline_name = 'units'\n",
     "\n",
     "pipeline = MLPipeline(pipeline_name)"
    ]
