rename timesfm tutorial

--- a/tutorials/pipelines/UniTS.ipynb
+++ b/tutorials/pipelines/UniTS.ipynb
@@ -118,7 +118,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/linhnk/Orion/.conda/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/linhnk/Orion/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -342,7 +342,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9899/9899 [01:44<00:00, 94.30it/s] \n"
+      "100%|██████████| 9899/9899 [01:46<00:00, 92.84it/s] \n"
      ]
     },
     {
@@ -467,8 +467,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[1.22821920e+09, 1.22942880e+09, 4.80906248e-01],\n",
-       "       [1.39829760e+09, 1.40847120e+09, 3.88512481e-01]])"
+       "array([[1.22821920e+09, 1.22938560e+09, 4.32249428e-01],\n",
+       "       [1.39829760e+09, 1.40849280e+09, 3.94754354e-01]])"
       ]
      },
      "execution_count": 14,
@@ -558,7 +558,7 @@
     {
      "data": {
       "text/plain": [
-       "[(1228219200.0, 1229428800.0), (1398297600.0, 1408471200.0)]"
+       "[(1228219200.0, 1229385600.0), (1398297600.0, 1408492800.0)]"
       ]
      },
      "execution_count": 16,
@@ -627,7 +627,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -641,7 +641,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
