add google colab badge

--- a/tutorials/Orion_with_Multivariate_Input.ipynb
+++ b/tutorials/Orion_with_Multivariate_Input.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[![Static Badge](https://img.shields.io/badge/tulog-open_in_colab-blue?style=flat&logo=googlecolab&color=blue)](https://colab.research.google.com/drive/1kOcfkr054oQkxxXUv9HlZbAk1QluFBjY?usp=drive_link)\n",
+    "\n",
+    "### We recommend using the [Google Colab](https://colab.research.google.com/drive/1kOcfkr054oQkxxXUv9HlZbAk1QluFBjY?usp=drive_link) verion of the notebook!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Using Orion on Multivariate Input\n",
     "\n",
     "In this notebook, we demonstrate how you can use multivariate time series in Orion. We will walk through the process using NASA's dataset, you can find the original data in [Telemanom](https://github.com/khundman/telemanom) github or directly from their [S3 bucket](https://s3-us-west-2.amazonaws.com/telemanom/data.zip)."
@@ -484,7 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
