--- a/tutorials/Convert_NASA_Data_to_Orion_Format.ipynb
+++ b/tutorials/Convert_NASA_Data_to_Orion_Format.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[![Static Badge](https://img.shields.io/badge/notebook-open_in_colab-blue?style=flat&logo=googlecolab&color=blue)](https://colab.research.google.com/drive/1kJRmrb8ONg7vLMhdeCiP3aNntPCn8vZk?usp=drive_link)\n",
+    "\n",
+    "### We recommend using the [Google Colab](https://colab.research.google.com/drive/1kJRmrb8ONg7vLMhdeCiP3aNntPCn8vZk?usp=drive_link) verion of the notebook!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 1. Convert NASA data to Orion format\n",
     "\n",
     "In this notebook we download the data from the Telemanom S3 bucket and reformat it\n",
@@ -577,7 +586,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
