--- a/tutorials/Convert_UCR_Data_to_Orion_Format.ipynb
+++ b/tutorials/Convert_UCR_Data_to_Orion_Format.ipynb
@@ -1,6 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "34ffe5a3-f269-4630-af59-05af2f656400",
+   "metadata": {},
+   "source": [
+    "[![Static Badge](https://img.shields.io/badge/notebook-open_in_colab-blue?style=flat&logo=googlecolab&color=blue)](https://colab.research.google.com/drive/1QsYjUX3DgS8ccvDtxEgLeHHmbtPViIqV?usp=drive_link)\n",
+    "\n",
+    "### We recommend using the [Google Colab](https://colab.research.google.com/drive/1QsYjUX3DgS8ccvDtxEgLeHHmbtPViIqV?usp=drive_link) verion of the notebook!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f48bfa5b-05ca-493e-a892-0eff6dbcb4a6",
+   "metadata": {},
+   "source": [
+    "# Convert UCR data to Orion format\n",
+    "\n",
+    "In this notebook we download the data and reformat it\n",
+    "as Orion pipelines expect.\n",
+    "\n",
+    "### Download the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "ac981ead",
@@ -667,7 +690,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
