--- a/tutorials/Evaluating_an_Orion_Pipeline.ipynb
+++ b/tutorials/Evaluating_an_Orion_Pipeline.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[![Static Badge](https://img.shields.io/badge/tulog-open_in_colab-blue?style=flat&logo=googlecolab&color=blue)](https://colab.research.google.com/drive/1DZX5GDDP99gUlGLBos1sKwpapi8PQTIv?usp=drive_link)\n",
+    "\n",
+    "### We recommend using the [Google Colab](https://colab.research.google.com/drive/1DZX5GDDP99gUlGLBos1sKwpapi8PQTIv?usp=drive_link) verion of the notebook!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Pipeline Scoring Example"
    ]
   },
@@ -144,9 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -360,7 +367,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -374,9 +381,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
