--- a/tutorials/Orion_on_Custom_Data.ipynb
+++ b/tutorials/Orion_on_Custom_Data.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Static Badge](https://img.shields.io/badge/tulog-open_in_colab-blue?style=flat&logo=googlecolab&color=blue)](https://colab.research.google.com/drive/1oYTqKe7GGIgvB7VffH0xllg77zUBpd7S?usp=drive_link)\n",
+    "\n",
+    "### We recommend using the [Google Colab](https://colab.research.google.com/drive/1oYTqKe7GGIgvB7VffH0xllg77zUBpd7S?usp=drive_link) verion of the notebook!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "ryw_yqg9JW9E"
    },
@@ -406,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
